[workspace.package]
edition = "2021"
version = "0.3.7"
license = "Apache-2.0"
repository = "https://github.com/akitamiabtc/yuv"

[workspace]
resolver = "2"
members = [
    "apps/cli",
    "apps/node",
    "apps/e2e-test",
    "apps/ogaki",
    "crates/pixels",
    "crates/types",
    "crates/tx-check",
    "crates/bitcoin-client",
    "crates/jsonrpc",
    "crates/storage",
    "crates/controller",
    "crates/tx-attach",
    "crates/tx-confirm",
    "crates/event-bus",
    "crates/event-bus-macros",
    "crates/rpc-api",
    "crates/rpc-server",
    "crates/indexers",
    "crates/dev-kit",
    "crates/bulletproof",
    "crates/p2p",
    "crates/bdk",
    "benches",
    "tests",
]
exclude = ["fuzz"]

[workspace.dependencies]
thiserror = { version = "1.0", default-features = false }
serde = { version = "1.0.104", default-features = false }
tokio = { version = "1.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
log = { version = "0.4.20", default-features = false }
futures = { version = "0.3.5", default-features = false }
jsonrpsee = { version = "0.20", default-features = false }
async-trait = { version = "0.1.73", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
uuid = { version = "1.4.1", default-features = false }
bitcoin = { version = "0.30", default-features = false }
reqwest = { version = "0.11", default-features = false }
flume = { version = "0.11.0" }
eyre = { version = "0.6.8" }
hex = { version = "0.4.3" }
mockall = { version = "0.12.0" }
ciborium = { version = "0.2.2" }
color-eyre = { version = "0.6.2" }
once_cell = { version = "1.18.0" }

[workspace.dependencies.config]
version = "0.13.3"
default-features = false
# maybe in future we'll add more formats
features = ["toml"]
