[package]
name = "e2e-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bdk = { path = "../../crates/bdk" }
yuv-storage = { path = "../../crates/storage", features = ["leveldb"] }
yuv-types = { path = "../../crates/types" }
yuv-pixels = { path = "../../crates/pixels" }
yuv-rpc-api = { path = "../../crates/rpc-api", features = ["client"] }
ydk = { path = "../../crates/dev-kit" }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
bitcoin = { workspace = true, features = ["serde"] }
eyre = { workspace = true }
jsonrpsee = { workspace = true }
config = { workspace = true }
serde = { workspace = true, features = ["rc"] }

clap = { version = "4.1.6", features = ["derive", "cargo"] }
serde_json = { version = "1.0" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
futures = { version = "0.3.30" }
once_cell = { version = "1.19.0" }
rand = { version = "0.8.5" }
tracing-appender = { version = "*" }
csv = "1.3.0"
chrono = { version = "0.4.37" }
