[package]
name = "bulletproof"
description = "Provides cryptography implementation to bulletproof plus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rand = { version = "0.8.5" }
sha2 = { version = "0.10.8" }
merlin = { version = "3.0.0" }
lazy_static = { version = "1.4.0" }

multiexp = { version = "0.4.0", features = ["batch"] }
k256 = { version = "0.13.2", features = [
    "arithmetic",
    "bits",
    "hash2curve",
    "ecdh",
] }
bitcoin = { workspace = true }
eyre = { workspace = true }

[features]
default = ["std"]
std = []
