[package]
name        = "event-bus-macros"
description = "Proc macro definitions for `event-bus` crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn   = { version = "2.0.29" }
quote = { version = "1.0.33" }
uuid  = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
event-bus = { path = "../event-bus" }
