[package]
name        = "event-bus"
description = "A simple event bus for multiple channels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flume   = { workspace = true }
tracing = { workspace = true }

event-bus-macros = { path = "../event-bus-macros" }

[dev-dependencies]
tokio-test = { version = "0.4.3" }
