[package]
name = "jsonrpc"
description = "Async JSON-RPC client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# A transport that uses `reqwest` as the HTTP client
reqwest_http = ["base64", "reqwest"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
async-trait = { workspace = true }
reqwest = { workspace = true, optional = true, features = [ "rustls-tls", "json" ] }

base64 = { version = "0.13.0", optional = true }
