[package]
name = "yuv-tx-attach"
description = "YUV Protocol's transactions attach module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bulletproof = ["yuv-pixels/bulletproof"]

[dependencies]
event-bus = { path = "../event-bus" }
yuv-types = { path = "../types", features = ["messages"] }
yuv-pixels = { path = "../pixels" }
yuv-storage = { path = "../storage" }

thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
yuv-pixels = { path = "../pixels" }
yuv-p2p = { path = "../p2p", features = ["mocks"] }
yuv-controller = { path = "../controller" }
tokio = { workspace = true, features = ["test-util", "macros"] }
once_cell = { workspace = true }
tokio-test = "0.4.3"
