[package]
name = "yuv-tx-check"
description = "YUV Protocol's transactions checker module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bulletproof = ["dep:k256", "yuv-pixels/bulletproof", "yuv-types/bulletproof"]

[dependencies]
event-bus = { path = "../event-bus" }
yuv-types = { path = "../types", features = ["messages"] }
yuv-pixels = { path = "../pixels" }
yuv-storage = { path = "../storage" }
bitcoin-client = { path = "../bitcoin-client" }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true }
bitcoin = { workspace = true }
uuid = { workspace = true }

k256 = { version = "0.13.2", optional = true }
log = "0.4.21"

[dev-dependencies]
once_cell = "1.18.0"
lazy_static = "1.4.0"
serde_json = { workspace = true }
