[package]
name = "yuv-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde", "std"]
std = ["bitcoin/std", "yuv-pixels/std"]
no-std = ["bitcoin/no-std", "yuv-pixels/no-std"]
serde = [
    "dep:serde",
    "dep:typetag",
    "dep:serde_json",
    "dep:ciborium",
    "bitcoin/serde",
    "yuv-pixels/serde",
]
messages = []
consensus = []
bulletproof = ["yuv-pixels/bulletproof"]

[dependencies]
yuv-pixels = { path = "../pixels", features = ["consensus"] }
event-bus = { path = "../event-bus" }

bitcoin = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
typetag = { version = "0.2.16", optional = true }
dyn-clone = { version = "1.0.17" }
uuid = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, features = ["alloc"], optional = true }
ciborium = { workspace = true, optional = true }
eyre = { workspace = true }
core2 = { version = "0.4.0" }

[dev-dependencies]
once_cell = "1.18.0"
