[package]
name = "yuv-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde", "std"]
std = ["bitcoin/std", "yuv-pixels/std"]
no-std = ["bitcoin/no-std", "yuv-pixels/no-std"]
serde = ["dep:serde", "dep:typetag", "bitcoin/serde", "yuv-pixels/serde"]
messages = ["dep:event-bus"]
consensus = []
bulletproof = ["yuv-pixels/bulletproof"]

[dependencies]
yuv-pixels = { path = "../pixels", features = ["consensus"] }
event-bus = { path = "../event-bus", optional = true }
bitcoin-client = { path = "../bitcoin-client" }

bitcoin = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
typetag = { version = "0.2.16", optional = true }
eyre = { workspace = true }
core2 = { version = "0.4.0" }

[dev-dependencies]
once_cell = "1.18.0"
serde_json = { workspace = true, features = ["alloc"] }
